--- a/config.json
+++ b/config.json
@@ -34,7 +34,7 @@
       "host": "127.0.0.1",
       "port": 5432,
       "user": "miningcore",
-      "password": "lsmo4411!",
+      "password": "password",
       "database": "miningcore"
     }
   },
